--- a/folder_config.ini
+++ b/folder_config.ini
@@ -1,4 +1,5 @@
 [DEFAULT]
-repred_location = ./repred/
-fasta_location = ./fasta/
+repred_location = ./pcr/repred/
+fasta_location = ./pcr/fasta/
 reference_fasta = ~/PycharmProjects/transposcope_backend/reference/
+type = pcr
