--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,10 @@
 *.iml
 out
 gen
-output/
-fp/fasta/
-other_files/
-<<<<<<< HEAD
-repred/
-blast_ass_ref.sh.e*
-blast_ass_ref.sh.o*
-output*/
-=======
-fp/repred/
+output/*
+fp/fasta/*
+other_files/*
+fp/repred/*
 hg_19.fa
-fp/
-pcr/
->>>>>>> b3167088c12f0b74e60985702311db05e211f701
+fp/*
+pcr/*
